--- a/Lab2/lot.html
+++ b/Lab2/lot.html
@@ -10,31 +10,35 @@
 </head>
 <body>
     <h1>Lot Kapsztad - Nowosybirsk</h1>
-    <h2><a href="https://pl.wikipedia.org/wiki/Kapsztad">Kapsztad</a></h2>
-    <img src="kapsztad.jpg" alt="kapsztad">
-    <h2><a href="https://pl.wikipedia.org/wiki/Nowosybirsk">Nowosybirsk</a></h2>
-    <img src="nowosybirsk.jpg" alt="nowosybirsk">
-    <p id="pogoda">
-        <b>Przewidywana pogoda</b><br>
-        Kapsztad: 20°C, deszcz<br>
-        Nowosybirsk: 5°C, bezchmurnie
-    </p>
-    <p id="opis">
-        <b>Opis lotu</b><br>
-        Czas: 10h 30min<br>
-        Samolot: Boeing 777<br>
-        Liczba miejsc: 550
-    </p>
-    <img src="boeing.jpg" alt="boeing">
+    <section>
+        <h2><a href="https://pl.wikipedia.org/wiki/Kapsztad">Kapsztad</a></h2>
+        <img src="kapsztad.jpg" alt="kapsztad">
+    </section>
+    <section>
+        <h2><a href="https://pl.wikipedia.org/wiki/Nowosybirsk">Nowosybirsk</a></h2>
+        <img src="nowosybirsk.jpg" alt="nowosybirsk">
+    </section>
+    <section id="pogoda">
+        <h2>Przewidywana pogoda</h2>
+        <p>Kapsztad: 20°C, deszcz</p>
+        <p>Nowosybirsk: 5°C, bezchmurnie</p>
+    </section>
+    <section id="opis">
+        <h2>Opis lotu</h2>
+        <p>Czas: 10h 30min</p>
+        <p>Samolot: Boeing 777</p>
+        <p>Liczba miejsc: 550</p>
+        <img src="boeing.jpg" alt="boeing">
+    </section>
     <ul id="lista">
-        <b>Lista pasażerów</b>
+        <p class="tytulListy">Lista pasażerów</p>
         <li>Jan Kowalski</li>
         <li>John Smith</li>
         <li>Giovanni Ferrari</li>
         <li>Jonas Kalvaitis</li>
     </ul>
+    <footer>
+        <a href="plik.html">Powrót</a>
+    </footer>
 </body>
-<footer>
-    <a href="plik.html">Powrót</a>
-</footer>
 </html>
