--- a/Lab2/plik.html
+++ b/Lab2/plik.html
@@ -39,7 +39,7 @@
                     <td>11.12.21</td>
                     <td>11:11</td>
                 </tr>
-                <tr id="drugi"> 
+                <tr id="drugiLot"> 
                     <td><a href="lot.html">002</a></td> 
                     <td>Kapsztad</td> 
                     <td>Nowosybrisk</td> 
