--- a/Lab2/lot.html
+++ b/Lab2/lot.html
@@ -30,13 +30,15 @@
         <p>Liczba miejsc: 550</p>
         <img src="boeing.jpg" alt="boeing">
     </section>
-    <ul id="lista">
+    <section id="lista">
         <p class="tytulListy">Lista pasażerów</p>
-        <li>Jan Kowalski</li>
-        <li>John Smith</li>
-        <li>Giovanni Ferrari</li>
-        <li>Jonas Kalvaitis</li>
-    </ul>
+        <ul>
+            <li>Jan Kowalski</li>
+            <li>John Smith</li>
+            <li>Giovanni Ferrari</li>
+            <li>Jonas Kalvaitis</li>
+        </ul>
+    </section>
     <footer>
         <a href="plik.html">Powrót</a>
     </footer>
