--- a/Lab2/lot.html
+++ b/Lab2/lot.html
@@ -32,11 +32,23 @@
     </section>
     <section id="lista">
         <p class="tytulListy">Lista pasażerów</p>
-        <ul>
-            <li>Jan Kowalski</li>
-            <li>John Smith</li>
-            <li>Giovanni Ferrari</li>
-            <li>Jonas Kalvaitis</li>
+        <ul id="pasazerowie">
+            <li class="tooltip">
+                Jan Kowalski
+                <span class="tooltiptext">46 lat, Polska</span>
+            </li>
+            <li class="tooltip">
+                John Smith
+                <span class="tooltiptext">27 lat, UK</span>
+            </li>
+            <li class="tooltip">
+                Giovanni Ferrari
+                <span class="tooltiptext">35 lat, Włochy</span>
+            </li>
+            <li class="tooltip">
+                Jonas Kalvaitis
+                <span class="tooltiptext">58 lat, Litwa</span>
+            </li>
         </ul>
     </section>
     <footer>
