--- a/Lab2/plik.html
+++ b/Lab2/plik.html
@@ -11,7 +11,7 @@
 <body>
     <div class="flex-container">
         <div id="lewy">
-            <menu>
+            <nav>
                 <h2>Menu</h2>
                 <li><a href="lot.html">O nas</a></li>
                 <li><a href="lot.html">Oferta</a></li>
@@ -23,7 +23,7 @@
                     <li><a href="lot.html">Podstrona 1</a></li>
                     <li><a href="lot.html">Podstrona 2</a></li>
                 </ul>
-            </menu>
+            </nav>
         </div>
         <div id="srodek">
             <h1>Lista lotów</h1>
@@ -56,14 +56,11 @@
                     </tbody>
                 </table>
             </div>
-            <footer>
-                Autor: Szymon Stolarczyk
-            </footer>
         </div>
         <div id="prawy">
             <section id="opoznienia">
+                <h2>Opóźnione loty</h2>
                 <table border="1">
-                    <caption> Opóźnione loty </caption>
                     <tbody>
                         <tr> 
                             <td>Skąd</td> 
@@ -128,39 +125,47 @@
                     </tbody>
                 </table>
             </section>
-            <form>
-                <p>
-                    <label for="fname">Imię:</label>
-                    <input type="text" id="fname">
-                </p>
-                <p>
-                    <label for="lname">Nazwisko:</label>
-                    <input type="text" id="lname">
-                </p>
-                <p>
-                    <label for="skad">Skąd:</label>
-                    <select id="skad">
-                        <option value="Londyn">Londyn</option>
-                        <option value="NYC">NYC</option>
-                        <option value="Kapsztad">Kapsztad</option>
-                        <option value="Nowosybirsk">Nowosybirsk</option>
-                    </select>
-                </p>
-                <p>
-                    <label for="dokad">Dokąd:</label>
-                    <select id="dokad">
-                        <option value="Londyn">Londyn</option>
-                        <option value="NYC">NYC</option>
-                        <option value="Kapsztad">Kapsztad</option>
-                        <option value="Nowosybirsk">Nowosybirsk</option>
-                    </select>
-                </p>
-                <p>
-                    <input type="reset" value="Wyczyść">
-                    <input type="submit" value="Rezerwuj">
-                </p>
-            </form>
+            <section>
+                <h2>
+                    Rezerwuj lot
+                </h2>
+                <form>
+                    <p>
+                        <label for="fname">Imię:</label>
+                        <input type="text" id="fname">
+                    </p>
+                    <p>
+                        <label for="lname">Nazwisko:</label>
+                        <input type="text" id="lname">
+                    </p>
+                    <p>
+                        <label for="skad">Skąd:</label>
+                        <select id="skad">
+                            <option value="Londyn">Londyn</option>
+                            <option value="NYC">NYC</option>
+                            <option value="Kapsztad">Kapsztad</option>
+                            <option value="Nowosybirsk">Nowosybirsk</option>
+                        </select>
+                    </p>
+                    <p>
+                        <label for="dokad">Dokąd:</label>
+                        <select id="dokad">
+                            <option value="Londyn">Londyn</option>
+                            <option value="NYC">NYC</option>
+                            <option value="Kapsztad">Kapsztad</option>
+                            <option value="Nowosybirsk">Nowosybirsk</option>
+                        </select>
+                    </p>
+                    <p>
+                        <input type="reset" value="Wyczyść">
+                        <input type="submit" value="Rezerwuj">
+                    </p>
+                </form>
+            </section>
         </div>
     </div>
+    <footer>
+        Autor: Szymon Stolarczyk
+    </footer>
 </body>
 </html>
