--- a/Lab2/plikKopia.html
+++ b/Lab2/plikKopia.html
@@ -168,5 +168,8 @@
             Autor: Szymon Stolarczyk
         </footer>
     </div>
+    <div id="okienko">
+        Rezerwacja udana!
+    </div>
 </body>
 </html>
